style.css
@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  max-width: 100vw;
}

:root {
  --dark: hsl(0, 0%, 7%);
  --gray: hsl(232, 18%, 74%);

  --padding: 4rem;

  /** MAIN ACCENT */
  --accent: var(--accent-green);

  /** FOR CHANGING ACCENT COLORS */
  --accent-green: hsl(138, 95%, 71%);
  --accent-red: hsl(0, 95%, 71%);
  --accent-blue: hsl(183, 95%, 71%);
  --accent-gray: hsl(0, 0%, 67%);
}

@media (max-width: 640px) {
  :root {
    --padding: 1rem;
  }
}

::selection {
  background-color: var(--accent);
  color: var(--dark);
}

html {
  scroll-behavior: smooth;
}

body {
  background-color: var(--dark);
  color: white;
  font-family: 'Figtree', sans-serif;
  font-size: 20px;
  overflow-x: hidden;
}

body.menu-open {
  overflow-y: hidden;
}

button,
a {
  font-family: 'Figtree', sans-serif;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem;
  height: 6rem;
  width: calc(100% - var(--padding));
  position: fixed;
  top: 2rem;
  left: 50%;
  transform: translate(-50%);
  z-index: 3;
}

.nav-logo {
  cursor: pointer;
  font-size: clamp(1.8rem, 5vw, 3rem);
  text-decoration: none;
  font-weight: bold;
  letter-spacing: 5px;
  color: var(--accent);
  user-select: none;
  padding: 0.5rem;
  border: solid 3px transparent;
  outline: none;
}

.nav-logo:focus-visible {
  border: solid 3px white;
}

.menu-button {
  background-color: transparent;
  border: solid 3px transparent;
  outline: none;
  color: white;
  height: 4rem;
  aspect-ratio: 1;
  position: relative;
  cursor: pointer;
  transition: background-color 300ms ease;
  clip-path: polygon(50% 0%, 100% 0, 100% 75%, 75% 100%, 0 100%, 0 25%, 25% 0);
}

@media (max-width: 640px) {
  .menu-button {
    height: 3rem;
  }
}

.menu-button:hover {
  background-color: color-mix(in hsl, var(--gray) 15%, #ffffff00);
}

.menu-button:focus-visible {
  clip-path: unset;
  border-color: white;
}

.menu-button-icon {
  font-size: clamp(1.8rem, 5vw, 3rem);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.open {
  transition: 300ms ease 300ms;
  transition-property: transform, opacity;
}

.close {
  transform: translate(-100%, -50%);
  opacity: 0;
  transition: 300ms ease;
  transition-property: transform, opacity;
}

body.menu-open .close {
  transform: translate(-50%, -50%);
  opacity: 1;
  transition-delay: 300ms;
}

body.menu-open .open {
  transform: translate(0, -50%);
  opacity: 0;
  transition-delay: 0ms;
}

section {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

section.hero {
  justify-content: center;
  align-items: center;
}

header {
  display: flex;
  flex-direction: column;
  gap: .7rem;
}

.designation {
  display: flex;
  justify-content: start;
  align-items: center;
  gap: .5rem;
  user-select: none;
  color: var(--gray);
}

.letter {
  font-size: clamp(.9rem, calc(1vw + .5rem), calc(1vw + .5rem));
  font-weight: 600;
}

.letter.whitespace {
  width: 1rem;
}

.name {
  font-size: clamp(2.5rem, 5vw, 15rem);
  position: relative;
  display: flex;
  justify-content: start;
  align-items: start;
  flex-direction: column;
}

.name-break {
  position: relative;
  color: transparent;
  letter-spacing: 4px;
  color: transparent;
  transition: color ease;
  transition-duration: 0;
  transition-delay: 1100ms;
}

.name.visible-animate .name-break {
  color: white;
}

.name-break::before,
.name-break::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--accent);
  transform: scaleX(0);
}

.name-break::before {
  transform-origin: left;
}

.name-break::after {
  transform-origin: right;
}

.name.visible-animate .name-break::before {
  animation: before-animate 700ms ease-in-out 500ms 1;
}

.name-break::after {
  transition: transform ease-in-out;
  transition-delay: 1300ms;
  transition-duration: 0ms;
}

.name.visible-animate .name-break::after {
  animation: after-animate 700ms ease-in-out 1200ms 1;
}

@keyframes before-animate {
  0% {
    transform: scaleX(0);
  }

  100% {
    transform: scaleX(1);
  }
}

@keyframes after-animate {
  0% {
    transform: scaleX(1);
  }

  100% {
    transform: scaleX(0);
  }
}

.scroll-indicator {
  cursor: pointer;
  position: absolute;
  bottom: 3rem;
  font-size: clamp(1.2rem, 3vw, 3rem);
  opacity: 0;
  transition: opacity 300ms ease 2000ms;
  animation: up-and-down 5000ms ease 4000ms infinite forwards;
}

header:has(.name.visible-animate)~.scroll-indicator {
  opacity: 1;
}

@keyframes up-and-down {

  0%,
  100% {
    transform: translateY(0);
  }

  20% {
    transform: translateY(1.5rem);
  }

  40% {
    transform: translateY(1rem);
  }

  70% {
    transform: translateY(1.5rem);
  }

}

section.showcase {
  gap: var(--padding);
  padding: 0;
  justify-content: start;
  align-items: center;
}

.project {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: calc(100% - 2rem);
  padding-inline: 1rem;
  gap: 2rem;
  min-height: 30rem;
  counter-increment: project-counter;
}

.project:nth-child(even) {
  flex-direction: row-reverse;
}

.project>* {
  flex: 1;
}

.project-info {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  width: 50%;
}

.project-title {
  font-size: clamp(1.4rem, 3vw, 10rem);
  position: relative;
  transform: translateY(3rem);
  opacity: 0;
  transition: 500ms ease;
  transition-property: opacity, transform;
}

.project-title::before, .project-title::after {
  position: absolute;
  transform: translateX(-5rem);
  opacity: 0;
  transition: 500ms ease 900ms;
  transition-property: opacity, transform;
}

.project-title::before {
  content: '';
  width: 5rem;
  height: 2px;
  background-color: var(--accent);
  top: -2rem;
  left: 0;
}

.project-title::after {
  content: counter(project-counter);
  position: absolute;
  top: -2.65rem;
  left: 6rem;
  font-size: 1.2rem;
  color: var(--accent);
}

.project-info.visible-animate .project-title {
  transform: unset;
  opacity: 1;
}

.project-info.visible-animate .project-title::before, .project-info.visible-animate .project-title::after {
  transform: unset;
  opacity: 1;
}

.project-description {
  line-height: 1.5;
  max-width: 50ch;
  transform: translateY(3rem);
  opacity: 0;
  transition: 500ms ease 300ms;
  transition-property: opacity, transform;
}

.project-info.visible-animate .project-description {
  transform: unset;
  opacity: 1;
}

.project-link-button {
  width: fit-content;
  min-width: max-content;
  background-color: var(--accent);
  color: black;
  font-size: 1.2rem;
  padding: 1rem 2rem;
  border: solid 3px transparent;
  cursor: pointer;
  transform: translateY(3rem);
  opacity: 0;
  clip-path: polygon(10% 0, 100% 0, 100% 60%, 90% 100%, 0 100%, 0 40%);
  transition: 
    clip-path 300ms ease,
    transform 500ms ease 500ms,
    opacity 500ms ease 500ms;
}

.project-info.visible-animate .project-link-button {
  transform: unset;
  opacity: 1;
}

.project-link-button:where(:hover, :focus-visible) {
  clip-path: polygon(0 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 0 0);
}

.project-link-button:focus-visible {
  border-color: white;
}

.project-image {
  aspect-ratio: 16/9;
  width: 50%;
  border: solid 1px var(--gray);
  transform: translate(10rem);
  opacity: 0;
  transition: 500ms ease;
  transition-property: transform, opacity;
}

.project:nth-of-type(even) .project-image {
  transform: translate(-10rem);
}

.project-image.visible-animate, .project:nth-of-type(even) .project-image.visible-animate {
  transform: unset;
  opacity: 1;
}

@media (max-width: 840px) {

  section.showcase {
    gap: 8rem;
    padding-block: 4rem;
  }

  .project {
    flex-direction: column-reverse;
    gap: 4rem;
    min-height: unset;
    justify-content: center;
    align-items: center;
  }

  .project:nth-of-type(even) {
    flex-direction: column-reverse;
  }

  .project-info {
    width: 100%;
    max-width: 30rem;
  }

  .project-link-button {
    padding: .5rem 1rem;
    font-size: 1rem;
  }

  .project-image {
    width: 100%;
    max-width: 30rem;
  }

}

.showcase button.github {
  width: fit-content;
  min-width: max-content;
  background-color: var(--accent);
  color: black;
  font-size: 1.2rem;
  padding: 1rem 2rem;
  border: solid 3px var(--accent);
  cursor: pointer;
  border-radius: .25rem;
  transition: 300ms ease;
  transition-property: background-color, color;
  outline: none;
}

.showcase button.github:where(:hover, :focus-visible) {
  background-color: transparent;
  color: white;
}

/** MENU DESIGN */

.menu {
  position: fixed;
  z-index: 2;
  top: -100%;
  left: 0;
  width: 100%;
  height: 50%;
  background-color: color-mix(in hsl, var(--gray) 15%, #ffffff00);
  border-bottom-left-radius: 150%;
  border-bottom-right-radius: 150%;
  backdrop-filter: blur(20px);
  transition: 500ms ease;
  transition-property: height, top, border-bottom-left-radius, border-bottom-right-radius, background-color;

  display: flex;
  justify-content: center;
  align-items: center;
}

/** FOR THOSE BROWSERS WHICH DON'T SUPPORT backdrop-filter */
body.menu-open section {
  filter: blur(20px);
  transition: filter 500ms ease;
}

@supports (backdrop-filter: blur(20px)) {
  body.menu-open section {
    filter: none;
    transition: unset;
  }
}

body.menu-open .menu {
  top: 0;
  height: 100%;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  background-color: color-mix(in hsl, var(--dark) 50%, #00000000);
}

.menu-link-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2rem;
}

.menu-link {
  font-size: 1.5rem;
  color: var(--accent);
  font-weight: bold;
  text-transform: uppercase;
  text-decoration: none;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  outline: none;
  position: relative;
  transform: translateY(-2rem);
  opacity: 0;
  transition: 200ms ease;
  transition-property: transform, opacity;
}

.menu-link.visible-animate {
  opacity: 1;
  transform: unset;
}

.menu-link::before {
  content: '';
  width: 100%;
  height: 2px;
  background-color: var(--accent);
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%) scaleX(0);
  transform-origin: right;
  transition: transform 300ms ease;
}

.menu-link:where(:hover, :focus-visible)::before {
  transform: translateX(-50%) scaleX(1);
  transform-origin: left;
}

.menu-footer {
  position: fixed;
  bottom: 0;
  left: 0;
  padding-inline: 1rem;
  padding-block: 2rem;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 1rem;
  opacity: 0;
}

body.menu-open .menu-footer {
  opacity: 1;
  transition: 300ms ease 500ms;
}

.menu-footer .github-icon {
  margin-right: 1rem;
  font-size: 1.5rem;
  cursor: pointer;
}

.github-icon:hover {
  color: var(--accent);
}

.accent-switch {
  height: 1.5rem;
  aspect-ratio: 1;
  border-radius: 50%;
  cursor: pointer;
  border: solid .25rem transparent;
}

.active {
  border-color: color-mix(in srgb, var(--accent) 20%, white)
}

.switch-green {
  background-color: var(--accent-green);
}

.switch-blue {
  background-color: var(--accent-blue);
}

.switch-red {
  background-color: var(--accent-red);
}

.switch-gray {
  background-color: var(--accent-gray);
}

